--- a/style.css
+++ b/style.css
@@ -92,7 +92,9 @@ body {
 
 .home h2,
 .info h2,
-.gallery h2 {
+.gallery h2,
+.rsvp h2,
+.gifts h2 {
   color: var(--dusty);
   font-family: "Dancing Script";
   font-size: 5rem;
@@ -106,7 +108,9 @@ body {
 }
 
 .home p,
-.gallery p {
+.gallery p,
+.rsvp p,
+.gifts p {
   font-size: 1.1rem;
   color: #666;
 }
@@ -163,10 +167,92 @@ body {
   font-weight: 300;
 }
 
-.gallery {
-  background-color: #f5f5f5;
+.gallery,
+.rsvp,
+.gifts {
   padding-top: 10rem;
   padding-bottom: 8rem;
+}
+
+.gallery {
+  background-color: #f5f5f5;
+}
+
+.rsvp {
+  background-color: var(--bg);
+}
+
+.rsvp h2 {
+  font-size: 4.5rem;
+}
+
+.rsvp p {
+  color: white;
+}
+
+.rsvp form label {
+  color: white;
+}
+
+.rsvp button {
+  background-color: var(--dusty);
+  color: white;
+  border: 1px solid var(--dusty);
+}
+
+.rsvp button:hover {
+  background-color: white;
+  color: var(--dusty);
+  border: 1px solid white;
+}
+
+footer {
+  padding: 3rem;
+  background-color: var(--dusty);
+  color: white;
+}
+
+footer a {
+  color: var(--bg);
+  font-weight: bold;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: white;
+}
+
+footer li {
+  list-style: none;
+  display: inline;
+}
+
+.audio-icon-wrapper {
+  width: 4rem;
+  height: 4rem;
+  font-size: 4rem;
+  position: fixed;
+  bottom: 2.5rem;
+  right: 2rem;
+  cursor: pointer;
+  color: white;
+  opacity: 0.5;
+  mix-blend-mode: difference;
+  animation: rotating 4s linear infinite;
+  transform-origin: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 0;
+}
+
+@keyframes rotating {
+  form {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 /* Media Query */
