--- a/countdown/simplyCountdown.theme.default.css
+++ b/countdown/simplyCountdown.theme.default.css
@@ -13,17 +13,17 @@
   justify-content: center;
   float: left;
   margin: 10px;
-  background: #fff;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  background: var(--dusty);
-  border-radius: 25%;
+  background: transparent;
+  border-radius: 0%;
+  border: 10px;
+  border-color: white;
 }
 .simply-countdown > .simply-section .simply-amount,
 .simply-countdown > .simply-section .simply-word {
   display: block;
   text-align: center;
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 .simply-countdown > .simply-section .simply-amount {
-  font-size: 1.6rem;
+  font-size: 3.2rem;
 }
