--- a/style.css
+++ b/style.css
@@ -1,13 +1,55 @@
 :root {
   --dusty: #444b75;
   --bg: #0a0a0a;
+  --basic: #6c6c6c;
   --shadow: 0 2px 2px rgb(0 0 0 / 0.5);
+}
+
+@font-face {
+  font-family: "Brittany";
+  src: url(font/BrittanySignature.ttf);
+}
+
+@font-face {
+  font-family: "Abhaya";
+  src: url(font/AbhayaLibre-Regular.ttf);
+}
+
+@font-face {
+  font-family: "Cormorant";
+  src: url(font/CormorantLight.ttf);
+}
+
+@font-face {
+  font-family: "Cormorant Italic";
+  src: url(font/CormorantLightItalic.ttf);
+}
+
+@font-face {
+  font-family: "Cormorant Bold";
+  src: url(font/CormorantBold.ttf);
 }
 
 body {
   font-size: 1.2rem;
   font-family: "Montserrat", sans-serif;
   min-height: 4000px;
+}
+
+.divider {
+  position: relative;
+}
+
+.element-divider {
+  border-top: 1px solid #202020; /* Ketebalan dan warna garis pemisah yang sesuai */
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+.vertical-text {
+  transform: rotate(90deg);
+  transform-origin: left bottom;
+  white-space: nowrap;
 }
 
 .hero::before {
@@ -17,7 +59,8 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(img/bg_affan-silva.jpg);
+  background-image: url(img/affan_silva_cover.jpg);
+  background-blend-mode: color-dodge;
   background-size: cover;
   background-position: center;
   z-index: -1;
@@ -31,34 +74,45 @@ body {
 
 .hero h1,
 .hero h4,
+.hero h5,
 .hero p {
   text-shadow: var(--shadow);
 }
 
 .hero h1 {
-  font-family: "Dancing Script", cursive;
+  font-family: "Brittany", sans-serif;
   font-size: 3rem;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .hero h4 {
-  font-size: 1.6rem;
+  font-family: "Abhaya", sans-serif;
+  font-size: 2rem;
+}
+
+.hero h5 {
+  margin-top: 1px;
+  font-family: "Abhaya", sans-serif;
+  font-size: 2rem;
+}
+
+.hero h6 {
+  font-family: "Abhaya", sans-serif;
+  font-size: 2rem;
+  margin-top: 200px;
 }
 
 .hero p {
-  font-size: 1.4rem;
+  font-family: "Abhaya", sans-serif;
+  font-size: 2rem;
 }
 
 .hero a {
-  color: var(--dusty);
-  background-color: white;
-  text-decoration: none;
-  box-shadow: var(--shadow);
-}
-
-.hero a:hover {
-  background-color: var(--dusty);
+  font-family: "Abhaya", sans-serif;
+  font-size: 2rem;
   color: white;
-  text-decoration: none;
+  margin-top: 500px;
 }
 
 .mynavbar {
@@ -72,7 +126,7 @@ body {
 
 .mynavbar .navbar-brand,
 .mynavbar .offcanvas-title {
-  font-family: "Dancing Script", cursive;
+  font-family: "Brittany", cursive;
   font-size: 3.2rem;
   font-weight: bold;
 }
@@ -81,46 +135,226 @@ body {
   text-transform: uppercase;
 }
 
-.home {
-  background-image: url(img/bg_dusty_blue.jpg);
+.box {
+  border: 1px solid white;
+  margin: 20px;
+}
+
+.box-black {
+  border: 0.6px solid black;
+  padding: 0.6rem;
+}
+
+.with-split {
+  display: flex;
+  justify-content: center; /* Mengatur konten secara horizontal ke tengah */
+  align-items: center; /* Mengatur konten secara vertikal ke tengah */
+  height: 100%; /* Pastikan elemen memiliki tinggi 100% agar dapat diatur ke tengah */
+  padding: 2.3rem;
+}
+
+.col-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.countdown::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(img/bg_countdown.jpg);
   background-size: cover;
-  min-height: 100vh;
+  background-position: center;
+  z-index: -1;
+  filter: none;
+}
+
+.countdown {
+  position: relative;
+  min-height: 35vh;
   margin-top: -6.5rem;
   padding-top: 15rem;
   padding-bottom: 5rem;
 }
 
-.home h2,
-.info h2,
-.gallery h2,
-.rsvp h2,
-.gifts h2 {
+.countdown h1 {
+  font-family: "Cormorant", sans-serif;
+  font-size: 2.5rem;
+  color: white;
+}
+
+.countdown h2 {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding-right: 2rem;
+  padding-left: 2rem;
+  font-family: "Cormorant Italic", sans-serif;
+  font-size: 1.8rem;
+  text-shadow: var(--shadow);
+  color: white;
+  line-height: 1.3em;
+}
+
+.simply-countdown {
+  font-family: "Abhaya", sans-serif;
+  font-size: 25px;
+  font-weight: 400;
+  color: white;
+}
+
+.home {
+  background-size: cover;
+  min-height: 100vh;
+  padding-top: 5rem;
+  padding-bottom: 2rem;
+}
+
+.home h1 {
+  font-family: "Brittany", cursive;
+  font-size: 3.2rem;
+  font-weight: bold;
+}
+
+.home h2 {
+  font-family: "Cormorant Italic", sans-serif;
+  font-size: 2rem;
+  color: var(--basic);
+  line-height: 1.3em;
+}
+
+.home h3 {
+  font-family: "Cormorant Italic", sans-serif;
+  font-size: 1.8rem;
+  padding: 10px;
+  color: var(--basic);
+  line-height: 1.3em;
+}
+
+.home h4 {
+  font-family: "Cormorant", sans-serif;
+  font-size: 3rem;
+  padding-top: 10px;
+  padding-left: 5px;
+  color: var(--basic);
+  line-height: 1.3em;
+}
+
+.home h7 {
+  font-size: 5rem;
+  font-family: "Brittany", cursive;
+  color: white;
+  margin-left: -10rem;
+}
+
+.home h8 {
+  font-size: 5rem;
+  font-family: "Brittany", cursive;
   color: var(--dusty);
-  font-family: "Dancing Script";
+  margin-left: -10rem;
+}
+
+.home h9 {
+  font-size: 5rem;
+  font-family: "Brittany", cursive;
+  color: white;
+  margin-right: -10rem;
+}
+
+.home h10 {
+  font-size: 5rem;
+  font-family: "Brittany", cursive;
+  color: var(--dusty);
+  margin-right: -10rem;
+}
+
+.home p {
+  font-family: "Cormorant Italic", sans-serif;
+  font-size: 1.7rem;
+  padding-left: 5px;
+  color: var(--basic);
+  line-height: 1.3em;
+}
+
+.col-4 h9,
+.col-4 h10 {
+  position: relative;
+  z-index: 1;
+}
+
+.stacked-text {
+  position: relative;
+}
+
+.stacked-text h7 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+}
+
+.stacked-text h7:nth-child(1) {
+  font-size: 5rem;
+  font-family: "Brittany", cursive;
+  color: white;
+  left: -9.8rem;
+  top: 30rem; /* Atur jarak antara teks pertama dan kedua */
+}
+
+.stacked-text h7:nth-child(2) {
+  font-size: 5rem;
+  font-family: "Brittany", cursive;
+  color: var(--dusty);
+  left: -10rem;
+  top: 30rem; /* Atur jarak antara teks kedua dan ketiga */
+}
+
+.stacked-text h8 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+}
+
+.stacked-text h8:nth-child(1) {
+  font-size: 5rem;
+  font-family: "Brittany", cursive;
+  color: white;
+  right: -10rem;
+  top: 30rem; /* Atur jarak antara teks pertama dan kedua */
+}
+
+.stacked-text h8:nth-child(2) {
+  font-size: 5rem;
+  font-family: "Brittany", cursive;
+  color: var(--dusty);
+  right: -9.8rem;
+  top: 30rem; /* Atur jarak antara teks kedua dan ketiga */
+}
+
+.rsvp h2 {
+  color: var(--dusty);
+  font-family: "Brittany";
   font-size: 5rem;
   font-weight: bold;
 }
 
-.home h3 {
-  color: #444444;
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
-}
-
-.home p,
-.gallery p,
-.rsvp p,
-.gifts p {
+.rsvp p {
   font-size: 1.1rem;
   color: #666;
 }
 
 .home .couple {
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .home .couple h3 {
-  font-family: "Dancing Script";
+  font-family: "Brittany";
   font-size: 2.4rem;
   color: var(--dusty);
 }
@@ -129,11 +363,105 @@ body {
   width: 100%;
 }
 
-.info {
-  background-color: var(--bg);
-  color: white;
+.fill-info {
+  margin-top: 0px;
+}
+
+.fill-info img {
+  width: 100%;
+}
+
+.above_info::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(img/bg_sebelum_info.jpg);
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
+  filter: none;
+}
+
+.above_info {
+  position: relative;
+  min-height: 30vh;
   padding-top: 10rem;
+  padding-bottom: 5rem;
+}
+
+.above_info p {
+  padding-right: 2rem;
+  padding-left: 2rem;
+  font-family: "Cormorant Italic", sans-serif;
+  font-size: 1.8rem;
+  text-shadow: var(--shadow);
+  color: white;
+  line-height: 1.3em;
+}
+
+.info,
+.gifts {
+  background-color: white;
+  padding-top: 0.6rem;
   padding-bottom: 8rem;
+}
+
+.info h1 {
+  font-size: 8rem;
+  font-family: "Cormorant", sans-serif;
+  color: var(--basic);
+}
+
+.info h2,
+.gifts h2 {
+  font-size: 3rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  font-family: "Cormorant", sans-serif;
+  color: var(--basic);
+  margin-right: 1rem;
+}
+
+.info h3,
+.gifts h3 {
+  font-size: 6rem;
+  font-family: "Abhaya", sans-serif;
+  font-weight: 700;
+  color: var(--basic);
+  margin-right: 1rem;
+}
+
+.info h4,
+.gifts h4 {
+  font-size: 2rem;
+  font-family: "Cormorant", sans-serif;
+  color: var(--basic);
+  margin-right: 1rem;
+}
+
+.info a,
+.gifts a {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
+  padding-top: 1rem;
+  padding-left: 2rem;
+  color: var(--basic);
+  background-color: transparent;
+  border-color: var(--basic);
+  align-items: center;
+  justify-content: center;
+}
+
+.info p,
+.gifts p {
+  font-size: 1.8rem;
+  font-family: "Cormorant", sans-serif;
+  color: var(--basic);
+  margin-right: 1rem;
 }
 
 .info .alamat {
@@ -167,42 +495,83 @@ body {
   font-weight: 300;
 }
 
-.gallery,
-.rsvp,
 .gifts {
-  padding-top: 10rem;
+  padding-top: 3rem;
   padding-bottom: 8rem;
+}
+
+.gifts h1 {
+  font-size: 8rem;
+  font-family: "Cormorant", sans-serif;
+  margin-left: -12rem;
+  color: var(--basic);
 }
 
 .gallery {
   background-color: #f5f5f5;
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+}
+
+.gallery h1 {
+  font-family: "Cormorant", sans-serif;
+  font-size: 2.5rem;
+  color: var(--basic);
+}
+
+.gallery-photo {
+  margin-top: 3rem;
 }
 
 .rsvp {
   background-color: var(--bg);
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
-.rsvp h2 {
-  font-size: 4.5rem;
+.rsvp h1 {
+  font-family: "Cormorant", sans-serif;
+  margin-top: 1.5rem;
+  font-size: 2.5rem;
+  color: white;
 }
 
 .rsvp p {
+  margin-top: 2rem;
+  font-size: 1.5rem;
+  font-family: "Cormorant", sans-serif;
   color: white;
 }
 
 .rsvp form label {
+  font-family: "Cormorant", sans-serif;
   color: white;
+  font-size: 1.5rem;
+}
+
+.mb-3 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
+.rsvp form-control {
+  font-family: "Cormorant", sans-serif;
+  color: white;
+  font-size: 3rem;
 }
 
 .rsvp button {
-  background-color: var(--dusty);
+  background-color: transparent;
+  font-size: 1.5rem;
   color: white;
-  border: 1px solid var(--dusty);
+  border: 1px solid white;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1.5rem;
 }
 
-.rsvp button:hover {
-  background-color: white;
-  color: var(--dusty);
+.rsvp a:hover {
+  color: white;
   border: 1px solid white;
 }
 
@@ -225,6 +594,22 @@ footer a:hover {
 footer li {
   list-style: none;
   display: inline;
+}
+
+#snackbar {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  font-size: 1.5rem;
+  font-family: "Cormorant", sans-serif;
+  padding: 1rem;
+  margin: 3rem;
+  border-radius: 1rem;
 }
 
 .audio-icon-wrapper {
@@ -262,7 +647,7 @@ footer li {
     font-size: 75%;
   }
   .simply-countdown > .simply-section {
-    padding: 70px;
+    padding: 40px;
   }
 }
 
@@ -290,7 +675,7 @@ footer li {
     font-size: 55%;
   }
   .simply-countdown > .simply-section {
-    padding: 45px;
+    padding: 35px;
     margin: 3px;
   }
   .sticky-top {
